# figue

./: Cargo.toml  DESIGN-layered-config.md  README.md
.github/workflows/: test.yml
crates/figue/: CHANGELOG.md
crates/figue-attrs/: CHANGELOG.md
crates/figue/examples/: args_showcase.rs  builtins.rs
crates/figue/src/: completions.rs  driver.rs  help.rs  lib.rs  missing.rs  schema.rs  value_builder.rs
crates/figue/src/layers/: cli.rs
examples/: args_showcase.rs  args_simple.rs  demo_deser_error.rs  demo_errors.rs  demo_missing_config.rs  global_args.rs  layered_config.rs  test_ipaddr.rs
figue-attrs/: Cargo.toml
src/: builder.rs  completions.rs  config_format.rs  config_value.rs  config_value_parser.rs  driver.rs  dump.rs  env.rs  error.rs  help.rs  lib.rs  macros.rs  merge.rs  missing.rs  parser.rs  path.rs  provenance.rs  reflection.rs  schema.rs  span_registry.rs  value_builder.rs
src/layers/: cli.rs  env.rs  file.rs
src/schema/: error.rs  from_schema.rs  tests.rs
src/schema/snapshots/: figue__schema__tests__snapshot_schema_bad_config_field.snap  figue__schema__tests__snapshot_schema_bad_config_field.snap.new  figue__schema__tests__snapshot_schema_basic.snap  figue__schema__tests__snapshot_schema_basic.snap.new  figue__schema__tests__snapshot_schema_conflicting_long_flags.snap  figue__schema__tests__snapshot_schema_conflicting_long_flags.snap.new  figue__schema__tests__snapshot_schema_conflicting_short_flags.snap  figue__schema__tests__snapshot_schema_conflicting_short_flags.snap.new  figue__schema__tests__snapshot_schema_counted_on_non_integer.snap  figue__schema__tests__snapshot_schema_counted_on_non_integer.snap.new  figue__schema__tests__snapshot_schema_env_prefix_without_config.snap  figue__schema__tests__snapshot_schema_env_prefix_without_config.snap.new  figue__schema__tests__snapshot_schema_missing_args_annotation.snap  figue__schema__tests__snapshot_schema_missing_args_annotation.snap.new  figue__schema__tests__snapshot_schema_multiple_subcommands.snap  figue__schema__tests__snapshot_schema_multiple_subcommands.snap.new  figue__schema__tests__snapshot_schema_short_on_positional.snap  figue__schema__tests__snapshot_schema_short_on_positional.snap.new  figue__schema__tests__snapshot_schema_subcommand_on_non_enum.snap  (+3 more)
tests/integration/: ariadne.rs  err.rs  help.rs  layered.rs  sequence.rs  short_chaining.rs  simple.rs  subcommand.rs  subspans.rs
(+55 files in other folders)
