[package]
name = "figue"
version = "0.1.0"
edition = "2024"
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "A CLI arguments, config file and environment based on facet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/figue"
homepage = "https://github.com/bearcove/figue"

[dependencies]
